0.83.13
  - Added segment limit checks in Normal core for
    MOVSB/MOVSW/MOVSD and STOSB/STOSW/STOSD, which is
    needed for DOSBox-X to work with the Windows 3.1
    S3 86C928 display drivers that use segment limit
    exceptions to fake a linear framebuffer.
  - Added S3 XGA "byte swap" emulation, needed for
    correct menu/titlebar display in Windows 3.1 when
    using the S3 86C928 driver.
  - Added YUV (YUY2) overlay to S3 Trio64V+ card
    emulation. Tested with XingMPEG under Windows 3.1
    and ActiveMovie under Windows 98.
  - Added machine types for 5 different variations of
    S3 chipset: Vision864, Vision868, Trio32, Trio64,
    and (experimental) Trio64V+, ViRGE, ViRGE/VX, and
    S3 86C928.
  - Removed second PCI BAR for S3 MMIO register space.
    S3 datasheets do not show a second BAR. Windows 95
    is perfectly happy without it.
  - S3 SVGA XGA emulation BlitRect now supports
    COLOR_CMP. DirectX-based Windows 95 games are now
    able to blit in 256-color mode with a transparent
    color key value.
  - ANSI.SYS emulaion now supports the "Device Status
    Report" escape when asked through code 6 (report
    cursor position)
  - Fixed RAM mapping bugs related to MDA/CGA/Hercules
    emulation and the "allow more than 640kb" option,
    that failed to map RAM as expected, and because of
    that, easily triggered a "corrupt MCB chain" error
    message.
  - Worked around the mounting issue for disk or CD
    image files with LaunchBox, by allowing a mounting
    command-line with single quotes like IMGMOUNT D
    'X:\FILES\DOS.IMG' on Windows systems. (Wengier)
  - Restored Pentium MMX emulation code for the dynamic
    x86 core to that of version 0.83.11 for better
    compatibility with some Windows 9x games. (Wengier)
  - Added "compresssaveparts" config option (in the
    [dosbox] section) which when set to false will not
    compress the components in saved states. (Wengier)
  - When the current reported DOS version is less than